tests/spec/format/snapshots/function_multiple_params.snap
---
source: tests/spec/format/mod.rs
description: "fn calculate(a: int, b: int, c: int, d: int) -> int { a + b + c + d }"
---
fn calculate(a: int, b: int, c: int, d: int) -> int {
  a + b + c + d
}
