tests/spec/format/snapshots/function_public.snap
---
source: tests/spec/format/mod.rs
description: "pub fn greet() { \"hello\" }"
---
pub fn greet() {
  "hello"
}
