tests/spec/format/snapshots/function_public_with_attribute.snap
---
source: tests/spec/format/mod.rs
description: |-
  #[go(comma_ok)]
  pub fn ReadBuildInfo() -> Option<Ref<BuildInfo>>
---
#[go(comma_ok)]
pub fn ReadBuildInfo() -> Option<Ref<BuildInfo>>
