tests/spec/format/snapshots/function_type_param_with_unit_return.snap
---
source: tests/spec/format/mod.rs
description: "fn a(f: fn(int) -> ()) {}"
---
fn a(f: fn(int) -> ()) {}
