tests/spec/format/snapshots/function_with_body.snap
---
source: tests/spec/format/mod.rs
description: "fn add(a: int, b: int) -> int { a + b }"
---
fn add(a: int, b: int) -> int {
  a + b
}
