tests/spec/format/snapshots/function_with_mut_parameter.snap
---
source: tests/spec/format/mod.rs
description: "fn process(items: mut Slice<int>, count: int) -> Slice<int> { items }"
---
fn process(items: mut Slice<int>, count: int) -> Slice<int> {
  items
}
