tests/spec/format/snapshots/if_else_if_chain.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { if a { 1 } else if b { 2 } else if c { 3 } else { 4 } }"
---
fn test() {
  if a { 1 } else if b { 2 } else if c { 3 } else { 4 }
}
