tests/spec/format/snapshots/if_else_symmetric_breaking.snap
---
source: tests/spec/format/mod.rs
description: "fn medium_branch(items: Slice<int>, id: int) -> Slice<int> { let mut result: Slice<int> = []; for item in items { if item == id { result = result.append(item * 100) } else { result = result.append(item) } }; result }"
---
fn medium_branch(items: Slice<int>, id: int) -> Slice<int> {
  let mut result: Slice<int> = []
  for item in items {
    if item == id {
      result = result.append(item * 100)
    } else {
      result = result.append(item)
    }
  }
  result
}
