tests/spec/format/snapshots/if_let_else_if_let.snap
---
source: tests/spec/format/mod.rs
description: "fn test(a: Option<int>, b: Option<int>) -> int { if let Some(x) = a { x } else if let Some(y) = b { y } else { 0 } }"
---
fn test(a: Option<int>, b: Option<int>) -> int {
  if let Some(x) = a { x } else if let Some(y) = b { y } else { 0 }
}
