tests/spec/format/snapshots/if_let_simple.snap
---
source: tests/spec/format/mod.rs
description: "fn test(opt: Option<int>) { if let Some(x) = opt { use(x); } }"
---
fn test(opt: Option<int>) {
  if let Some(x) = opt { use(x) }
}
