tests/spec/format/snapshots/if_let_with_else.snap
---
source: tests/spec/format/mod.rs
description: "fn test(opt: Option<int>) -> int { if let Some(x) = opt { x } else { 0 } }"
---
fn test(opt: Option<int>) -> int {
  if let Some(x) = opt { x } else { 0 }
}
