tests/spec/format/snapshots/if_no_spaces.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { if true{1}else{2} }"
---
fn test() {
  if true { 1 } else { 2 }
}
